# udacity-clean-code-principles

./: .gitignore  .pep8  .pylintrc  README.md  churn_library.py  churn_notebook.ipynb  pyproject.toml  pytest.ini
models/: logistic_model.orig.pkl  logistic_model.pkl
tests/: __init__.py  conftest.py  test_churn_library.py
